Additional adjustments for playtesting

--- a/localisation/english/PB_Martians_l_english.yml
+++ b/localisation/english/PB_Martians_l_english.yml
@@ -3,8 +3,12 @@
 # Spirits #
   PB_Mars_First_Wave:0 "The First Wave"
   PB_Mars_First_Wave_TFH:0 "The First Wave"
+  PB_Mars_First_Wave_TFP:0 "The First Wave"
+  PB_Mars_First_Wave_TFD:0 "The First Wave"
   PB_Mars_Extermination_or_Extinction:0 "Extermination or Extinction"
   PB_Mars_Stunted_Development:0 "Stunted Development"
+  PB_Mars_Stunted_Development2:0 "Stunted Development"
+  PB_Mars_Home_away_from_Home:0 "A Home Away from Home"
 
   PB_Alien_Panic:0 "The Great Red Panic"
 
@@ -21,9 +25,25 @@
   MIF_Liquidation:0 "Liquidation"
   MIF_Two_Worlds_Plan:0 "Two Worlds Plan"
   MIF_No_Peace:0 "Coexistence is Impossible"
+  MIF_No_Peace_desc:0 "“I know there is much we can learn from each other if we can negotiate a truce. We can find a way to co-exist. Can there be a peace between us?”\n\n“Peace? No peace!”\n\n“What is it you want us to do?”\n\n“Die...DIE!”"
   MIF_Home_away_from_Home:0 "Home away from Home"
   MIF_United_Earth:0 "A United Earth"
   MIF_Martian_Earth:0 "A Martian Earth"
+
+  MIF_Reinforcement_Protocols_tt:0 "§YThe amount of Units and Equipment sent from the Homeworld will§! §Gincrease!§!"
+
+  MIF_Begin_Terraforming_tt:0 "§YThe speed of §!§rconverting§! §Ystates to Martian culture will increase by §!§G25%§!"
+
+  MIF_Study_Bacteria_tt:0 "§YThis will §Gprevent§! §Your forces from being affected by Earth diseases§!"
+
+  MIF_Local_Collaborators_tt:0 "§YWe can begin recruiting local human collaborators to our cause.§!"
+  MIF_Local_Collaborators2_tt:0 "§YWe can begin accepting local human cultures.§!"
+
+  MIF_Two_Worlds_Plan_tt:0 "§YEmpowering human collaborators will allow us to more easily integrate and colonize Earth, however, this plan is deeply unpopular with the Exterminationists. Conflict with the other invasion forces, should they not choose this path, is §!§Rinevitable.§!"
+
+  MIF_No_Peace_tt:0 "§YThis planet is ours, and it will allow only one sapient species.§!"
+
+  MIF_Home_away_from_Home_tt:0 "§YWe must sever our ties to the Mother-Hive, and while it will doom our brethren at home, this planet will be our second chance.\n\nNo further reinforcements will arrive.§!"
 
 # Events #
   invasion.1.t:0 "Flashes on Mars Detected"
@@ -39,11 +59,61 @@
   invasion.3.a:0 "Those alien bastards are gonna pay!"
   invasion.3.b:0 "Maybe the aliens have the right idea?"
 
+  invasion.4.t:0 "Martian Forces Attack the Cordon"
+  invasion.4.d:0 ""
+  invasion.4.a:0 "Oh shit."
+
+  invasion.5.t:0 "Expeditionary Force Moves Out"
+  invasion.5.d:0 ""
+  invasion.5.a:0 "This world will be ours!"
+
+  invasion.6.t:0 "Martian Cannister Lands in Woking!"
+  invasion.6.d:0 ""
+  invasion.6.a:0 "Oh."
+  invasion.6.b:0 "Take us to your leader!"
+
+  invasion.7.t:0 "Our Forces have crushed Woking"
+  invasion.7.d:0 ""
+  invasion.7.a:0 "Excellent."
+
+  invasion.8.t:0 "Martians overrun Woking"
+  invasion.8.d:0 ""
+  invasion.8.a:0 "Bloody hell!"
+
+  invasion.9.t:0 "Explosion in Tunguska!"
+  invasion.9.d:0 ""
+  invasion.9.a:0 "Send the Army East!"
+  invasion.9.b:0 "The Tripods march for Moscow!"
+
+  invasion.10.t:0 "Martians march from Tunguska"
+  invasion.10.d:0 ""
+  invasion.10.a:0 "The motherland calls for aid!"
+  
+  invasion.11.t:0 "Our Forces have Secured Tunguska"
+  invasion.11.d:0 ""
+  invasion.11.a:0 "Perfect."
+
+  invasionlogistics.1.t:0 "Reinforcements Arrive"
+  invasionlogistics.1.d:0 ""
+  invasionlogistics.1.a:0 "Welcome to our new home, brothers!"
+
+  invasionlogistics.2.t:0 "Seizing the American Fleet"
+  invasionlogistics.2.d:0 ""
+  invasionlogistics.2.a:0 "An excellent addition to our collection."
+
+  invasionlogistics.3.t:0 "The Royal Navy Surrenders"
+  invasionlogistics.3.d:0 ""
+  invasionlogistics.3.a:0 "Their contribution is acceptable."
+
 # Decisions #
   PB_MARS_Invasion_Command:0 "Central Invasion Command"
   PB_MARS_Invasion_Command_desc:0 "WIP"
   PB_Mars_Incoming_Reinforcements:0 "Incoming Reinforcements"
   PB_Establish_Eastern_States_Occupation:0 "Establish the Northeast Occupation Authority"
+  PB_Establish_British_Isles_Occupation:0 "Establish the Isles Occupation Region"
+  PB_Establish_Russian_Occupation:0 "Establish Eurasian Central Command"
+
+  MIF_Target_Neighbor:0 "Invade the Next Enemy"
 
 # Cosmetic Tags #
   TFH_Occupation_ni:0 "American Forward Operations Quadrant"
@@ -70,3 +140,178 @@
   TFH_Occupation_ds_ADJ:0 "Martian"
   TFH_Occupation_cn_ADJ:0 "Martian"
   TFH_Occupation_an_ADJ:0 "Martian"
+
+  TFP_Occupation_ni:0 "British Isles Central Command"
+  TFP_Occupation_ni_DEF:0 "The British Isles Central Command"
+  TFP_Occupation_ds:0 "British Isles Central Command"
+  TFP_Occupation_ds_DEF:0 "The British Isles Central Command"
+  TFP_Occupation_rc:0 "British Isles Central Command"
+  TFP_Occupation_rc_DEF:0 "The British Isles Central Command"
+  TFP_Occupation_an:0 "British Isles Central Command"
+  TFP_Occupation_an_DEF:0 "The British Isles Central Command"
+  TFP_Occupation_cn:0 "British Isles Central Command"
+  TFP_Occupation_cn_DEF:0 "The British Isles Central Command"
+  TFP_Occupation_lb:0 "British Isles Central Command"
+  TFP_Occupation_lb_DEF:0 "The British Isles Central Command"
+  TFP_Occupation_ss:0 "British Isles Central Command"
+  TFP_Occupation_ss_DEF:0 "The British Isles Central Command"
+  TFP_Occupation_jc:0 "British Isles Central Command"
+  TFP_Occupation_jc_DEF:0 "The British Isles Central Command"
+  TFP_Occupation_ni_ADJ:0 "Martian"
+  TFP_Occupation_rc_ADJ:0 "Martian"
+  TFP_Occupation_lb_ADJ:0 "Martian"
+  TFP_Occupation_ss_ADJ:0 "Martian"
+  TFP_Occupation_jc_ADJ:0 "Martian"
+  TFP_Occupation_ds_ADJ:0 "Martian"
+  TFP_Occupation_cn_ADJ:0 "Martian"
+  TFP_Occupation_an_ADJ:0 "Martian"
+
+  TFD_Occupation_ni:0 "Eurasian Operations Zone"
+  TFD_Occupation_ni_DEF:0 "The Eurasian Operations Zone"
+  TFD_Occupation_ds:0 "Eurasian Operations Zone"
+  TFD_Occupation_ds_DEF:0 "The Eurasian Operations Zone"
+  TFD_Occupation_rc:0 "Eurasian Operations Zone"
+  TFD_Occupation_rc_DEF:0 "The Eurasian Operations Zone"
+  TFD_Occupation_an:0 "Eurasian Operations Zone"
+  TFD_Occupation_an_DEF:0 "The Eurasian Operations Zone"
+  TFD_Occupation_cn:0 "Eurasian Operations Zone"
+  TFD_Occupation_cn_DEF:0 "The Eurasian Operations Zone"
+  TFD_Occupation_lb:0 "Eurasian Operations Zone"
+  TFD_Occupation_lb_DEF:0 "The Eurasian Operations Zone"
+  TFD_Occupation_ss:0 "Eurasian Operations Zone"
+  TFD_Occupation_ss_DEF:0 "The Eurasian Operations Zone"
+  TFD_Occupation_jc:0 "Eurasian Operations Zone"
+  TFD_Occupation_jc_DEF:0 "The Eurasian Operations Zone"
+  TFD_Occupation_ni_ADJ:0 "Martian"
+  TFD_Occupation_rc_ADJ:0 "Martian"
+  TFD_Occupation_lb_ADJ:0 "Martian"
+  TFD_Occupation_ss_ADJ:0 "Martian"
+  TFD_Occupation_jc_ADJ:0 "Martian"
+  TFD_Occupation_ds_ADJ:0 "Martian"
+  TFD_Occupation_cn_ADJ:0 "Martian"
+  TFD_Occupation_an_ADJ:0 "Martian"
+
+  TFH_Collaborators_ni:0 "Martian-American Union"
+  TFH_Collaborators_ni_DEF:0 "The Martian-American Union"
+  TFH_Collaborators_ds:0 "Martian-American Union"
+  TFH_Collaborators_ds_DEF:0 "The Martian-American Union"
+  TFH_Collaborators_rc:0 "Martian-American Union"
+  TFH_Collaborators_rc_DEF:0 "The Martian-American Union"
+  TFH_Collaborators_an:0 "Martian-American Union"
+  TFH_Collaborators_an_DEF:0 "The Martian-American Union"
+  TFH_Collaborators_cn:0 "Martian-American Union"
+  TFH_Collaborators_cn_DEF:0 "The Martian-American Union"
+  TFH_Collaborators_lb:0 "Martian-American Union"
+  TFH_Collaborators_lb_DEF:0 "The Martian-American Union"
+  TFH_Collaborators_ss:0 "Martian-American Union"
+  TFH_Collaborators_ss_DEF:0 "The Martian-American Union"
+  TFH_Collaborators_jc:0 "Martian-American Union"
+  TFH_Collaborators_jc_DEF:0 "The Martian-American Union"
+  TFH_Collaborators_ni_ADJ:0 "Martian"
+  TFH_Collaborators_rc_ADJ:0 "Martian"
+  TFH_Collaborators_lb_ADJ:0 "Martian"
+  TFH_Collaborators_ss_ADJ:0 "Martian"
+  TFH_Collaborators_jc_ADJ:0 "Martian"
+  TFH_Collaborators_ds_ADJ:0 "Martian"
+  TFH_Collaborators_cn_ADJ:0 "Martian"
+  TFH_Collaborators_an_ADJ:0 "Martian"
+
+  TFP_Collaborators_ni:0 "Trans-Stellar European Commonwealth"
+  TFP_Collaborators_ni_DEF:0 "The Trans-Stellar European Commonwealth"
+  TFP_Collaborators_ds:0 "Trans-Stellar European Commonwealth"
+  TFP_Collaborators_ds_DEF:0 "The Trans-Stellar European Commonwealth"
+  TFP_Collaborators_rc:0 "Trans-Stellar European Commonwealth"
+  TFP_Collaborators_rc_DEF:0 "The Trans-Stellar European Commonwealth"
+  TFP_Collaborators_an:0 "Trans-Stellar European Commonwealth"
+  TFP_Collaborators_an_DEF:0 "The Trans-Stellar European Commonwealth"
+  TFP_Collaborators_cn:0 "Trans-Stellar European Commonwealth"
+  TFP_Collaborators_cn_DEF:0 "The Trans-Stellar European Commonwealth"
+  TFP_Collaborators_lb:0 "Trans-Stellar European Commonwealth"
+  TFP_Collaborators_lb_DEF:0 "The Trans-Stellar European Commonwealth"
+  TFP_Collaborators_ss:0 "Trans-Stellar European Commonwealth"
+  TFP_Collaborators_ss_DEF:0 "The Trans-Stellar European Commonwealth"
+  TFP_Collaborators_jc:0 "Trans-Stellar European Commonwealth"
+  TFP_Collaborators_jc_DEF:0 "The Trans-Stellar European Commonwealth"
+  TFP_Collaborators_ni_ADJ:0 "Martian"
+  TFP_Collaborators_rc_ADJ:0 "Martian"
+  TFP_Collaborators_lb_ADJ:0 "Martian"
+  TFP_Collaborators_ss_ADJ:0 "Martian"
+  TFP_Collaborators_jc_ADJ:0 "Martian"
+  TFP_Collaborators_ds_ADJ:0 "Martian"
+  TFP_Collaborators_cn_ADJ:0 "Martian"
+  TFP_Collaborators_an_ADJ:0 "Martian"
+
+  TFD_Collaborators_ni:0 "United Terro-Martian Eurasia"
+  TFD_Collaborators_ni_DEF:0 "The United Terro-Martian Eurasia"
+  TFD_Collaborators_ds:0 "United Terro-Martian Eurasia"
+  TFD_Collaborators_ds_DEF:0 "The United Terro-Martian Eurasia"
+  TFD_Collaborators_rc:0 "United Terro-Martian Eurasia"
+  TFD_Collaborators_rc_DEF:0 "The United Terro-Martian Eurasia"
+  TFD_Collaborators_an:0 "United Terro-Martian Eurasia"
+  TFD_Collaborators_an_DEF:0 "The United Terro-Martian Eurasia"
+  TFD_Collaborators_cn:0 "United Terro-Martian Eurasia"
+  TFD_Collaborators_cn_DEF:0 "The United Terro-Martian Eurasia"
+  TFD_Collaborators_lb:0 "United Terro-Martian Eurasia"
+  TFD_Collaborators_lb_DEF:0 "The United Terro-Martian Eurasia"
+  TFD_Collaborators_ss:0 "United Terro-Martian Eurasia"
+  TFD_Collaborators_ss_DEF:0 "The United Terro-Martian Eurasia"
+  TFD_Collaborators_jc:0 "United Terro-Martian Eurasia"
+  TFD_Collaborators_jc_DEF:0 "The United Terro-Martian Eurasia"
+  TFD_Collaborators_ni_ADJ:0 "Martian"
+  TFD_Collaborators_rc_ADJ:0 "Martian"
+  TFD_Collaborators_lb_ADJ:0 "Martian"
+  TFD_Collaborators_ss_ADJ:0 "Martian"
+  TFD_Collaborators_jc_ADJ:0 "Martian"
+  TFD_Collaborators_ds_ADJ:0 "Martian"
+  TFD_Collaborators_cn_ADJ:0 "Martian"
+  TFD_Collaborators_an_ADJ:0 "Martian"
+
+  MIF_United_Earth_ni:0 "Terran-Martian Federation"
+  MIF_United_Earth_ni_DEF:0 "The Terran-Martian Federation"
+  MIF_United_Earth_ds:0 "Terran-Martian Federation"
+  MIF_United_Earth_ds_DEF:0 "The Terran-Martian Federation"
+  MIF_United_Earth_rc:0 "Terran-Martian Federation"
+  MIF_United_Earth_rc_DEF:0 "The Terran-Martian Federation"
+  MIF_United_Earth_an:0 "Terran-Martian Federation"
+  MIF_United_Earth_an_DEF:0 "The Terran-Martian Federation"
+  MIF_United_Earth_cn:0 "Terran-Martian Federation"
+  MIF_United_Earth_cn_DEF:0 "The Terran-Martian Federation"
+  MIF_United_Earth_lb:0 "Terran-Martian Federation"
+  MIF_United_Earth_lb_DEF:0 "The Terran-Martian Federation"
+  MIF_United_Earth_ss:0 "Terran-Martian Federation"
+  MIF_United_Earth_ss_DEF:0 "The Terran-Martian Federation"
+  MIF_United_Earth_jc:0 "Terran-Martian Federation"
+  MIF_United_Earth_jc_DEF:0 "The Terran-Martian Federation"
+  MIF_United_Earth_ni_ADJ:0 "Terran-Martian"
+  MIF_United_Earth_rc_ADJ:0 "Terran-Martian"
+  MIF_United_Earth_lb_ADJ:0 "Terran-Martian"
+  MIF_United_Earth_ss_ADJ:0 "Terran-Martian"
+  MIF_United_Earth_jc_ADJ:0 "Terran-Martian"
+  MIF_United_Earth_ds_ADJ:0 "Terran-Martian"
+  MIF_United_Earth_cn_ADJ:0 "Terran-Martian"
+  MIF_United_Earth_an_ADJ:0 "Terran-Martian"
+
+  MIF_United_Invasion_ni:0 "New Hiveland of Mars"
+  MIF_United_Invasion_ni_DEF:0 "The New Hiveland of Mars"
+  MIF_United_Invasion_ds:0 "New Hiveland of Mars"
+  MIF_United_Invasion_ds_DEF:0 "The New Hiveland of Mars"
+  MIF_United_Invasion_rc:0 "New Hiveland of Mars"
+  MIF_United_Invasion_rc_DEF:0 "The New Hiveland of Mars"
+  MIF_United_Invasion_an:0 "New Hiveland of Mars"
+  MIF_United_Invasion_an_DEF:0 "The New Hiveland of Mars"
+  MIF_United_Invasion_cn:0 "New Hiveland of Mars"
+  MIF_United_Invasion_cn_DEF:0 "The New Hiveland of Mars"
+  MIF_United_Invasion_lb:0 "New Hiveland of Mars"
+  MIF_United_Invasion_lb_DEF:0 "The New Hiveland of Mars"
+  MIF_United_Invasion_ss:0 "New Hiveland of Mars"
+  MIF_United_Invasion_ss_DEF:0 "The New Hiveland of Mars"
+  MIF_United_Invasion_jc:0 "New Hiveland of Mars"
+  MIF_United_Invasion_jc_DEF:0 "The New Hiveland of Mars"
+  MIF_United_Invasion_ni_ADJ:0 "Martian"
+  MIF_United_Invasion_rc_ADJ:0 "Martian"
+  MIF_United_Invasion_lb_ADJ:0 "Martian"
+  MIF_United_Invasion_ss_ADJ:0 "Martian"
+  MIF_United_Invasion_jc_ADJ:0 "Martian"
+  MIF_United_Invasion_ds_ADJ:0 "Martian"
+  MIF_United_Invasion_cn_ADJ:0 "Martian"
+  MIF_United_Invasion_an_ADJ:0 "Martian"
