--- a/localisation/english/PB_Opener_l_english.yml
+++ b/localisation/english/PB_Opener_l_english.yml
@@ -6,12 +6,20 @@
   Opener.1.b:0 "Disable Super Event Audio"
   PB_Music_Volume_Is_Tied_To_Super_Event_Audio:0 "§YSuper event audio is tied to music volume so if your music volume is set to zero then you will not hear any super event audio.§!"
   Opener.3.t:0 "VERY IMPORTANT"
+
   Opener.3.d:0 "Due to the nature of the mod and it's dependence on the TNO style scripted peace deal system the PAX team has disabled the use of potentially mod breaking diplomacy actions such as guarantees. We do understand that there may be some players that still wish to engage with these sytems despite the bugs it may (and will) cause.\n\nIf you do wish to disable the diplo blockers then do so by choosing the respective option below. Goodluck and Godspeed.\n\nIn the case of multiplayer only one player needs to choose the enable diplomacy option."
   Opener.3.a:0 "I am aware this will break the mod but still want to engage in diplomacy"
   Opener.3.b:0 "Leave it as is"
+
   Opener.4.t:0 "ALSO VERY IMPORTANT"
   Opener.4.d:0 "Due to the nature of the mod and it's dependence on the TNO style scripted peace deal system the PAX team has disabled the use of the potentially mod breaking vanilla peace deal system. We do understand that there may be some players that still wish to engage with this sytem despite the bugs it may (and will) cause.\n\nIf you do wish to disable the scripted peace deal system then do so by choosing the respective option below. Goodluck and Godspeed.\n\nIn the case of multiplayer only one player needs to choose the enable vanilla peace deal option."
   Opener.4.a:0 "I am aware this will break the mod but don't want the scripted peace deals"
   Opener.4.b:0 "Leave it as is"
+
+  Opener.5.t:0 "Enable Halloween Content?"
+  Opener.5.d:0 "This option will allow you to enable Halloween 2023 content, including the Martian Invasion. By enabling this, content in the mod will be derailed from normal functionality. Bugs and issues may occur due to preexisting content conflicts. Please keep this in mind when playing."
+  Opener.5.a:0 "Enable Halloween Content"
+  Opener.5.b:0 "No."
+
   PB_THIS_WILL_BREAK_THE_MOD_tt:0 "§RThis will break the mod!§!"
   PB_THIS_WILL_NOT_BREAK_THE_MOD_tt:0 "§GThis will not break the mod!§!"
