Doctrine fix and small prussia loc

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -474,9 +474,9 @@
   PB_PRS_Sins_Of_A_Forgotten_Kind:0 "Sins Of A Forgotten Kind"
   PB_PRS_Sins_Of_A_Forgotten_Kind_desc:0 ""
   PB_PRS_Our_Wisest_Mentor:0 "Our Wisest Mentor"
-  PB_PRS_Our_Wisest_Mentor_desc:0 ""
+  PB_PRS_Our_Wisest_Mentor_desc:0 "While a capable soldier, we must not forget that Bouhler truly established himself as a stateman. Using his political genius, he lead our nation through the turbulent years after the Great War. Turning what easily could have become a mismanaged pariah state, into a mightly industrial nation. Our people stand more united than ever before, with political stability unheard of in the Federation. All thanks to Bouhler's leadership."
   PB_PRS_Our_Mightiest_Hero:0 "Our Mightiest Hero"
-  PB_PRS_Our_Mightiest_Hero_desc:0 ""
+  PB_PRS_Our_Mightiest_Hero_desc:0 "Bouhler has been a great leader for Prussia, but he did not start out like that. For he served as a mightly military figure, along the lines of Fredrick the Great. He destroyed his enemies, while leading his own troops into triumph after triumph. His name shall join the annals of military history, and our children will know him as the great hero he is."
   PB_PRS_The_Time_Is_Now:0 "The Time Is Now"
   PB_PRS_The_Time_Is_Now_desc:0 "For the second time this century, Europe is burning. Jacobin ideology continues to spread amoungst the unruly classes of society. France's Revanchist government is making moves to make up for lost territory. And Britain's eyes remain across the Atlantic, blind to the goings on of Europe. As stability becomes a pipe dream, we are presented a rare opportunity to carve out a slice of the continent for ourselves. Prussian glory will be restored, and it will be earn through blood and steel."
   PB_PRS_Construct_The_Western_Line:0 "Construct The Western Line"
