--- a/localisation/english/PB_Opinion_Modifiers_l_english.yml
+++ b/localisation/english/PB_Opinion_Modifiers_l_english.yml
@@ -17,3 +17,5 @@
 	POL_normal_support_revolt:0 "Received Considerable Amount of Support during the Revolt"
 	POL_no_support_revolt:0 "Received No Support during the Revolt"
   aggressive_expansionism:0 "Aggressive Expansionism"
+  MIF_Disgusting_Humans:0 "Disgusting Humanoids"
+  MIF_Disgusting_Aliens:0 "Alien Invaders"
