--- a/localisation/english/PB_Martians_l_english.yml
+++ b/localisation/english/PB_Martians_l_english.yml
@@ -172,8 +172,12 @@
   PB_Establish_Eastern_States_Occupation:0 "Establish the Northeast Occupation Authority"
   PB_Establish_British_Isles_Occupation:0 "Establish the Isles Occupation Region"
   PB_Establish_Russian_Occupation:0 "Establish Eurasian Central Command"
+  MIF_Integrate_State:0 "Establish Control over [From.GetName]"
+  PB_Process_Humans:0 "Process Humans into Biofuel"
 
   MIF_Target_Neighbor:0 "Invade the Next Enemy"
+
+  red_weed:0 "Terraformed"
 
 # Cosmetic Tags #
   TFH_Occupation_ni:0 "American Forward Operations Quadrant"
