Reaching my Limit (in error fixing)

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -6668,8 +6668,8 @@ SAN_an_ADJ:0 "Indian"
  BEL_cn_ADJ:0 "Belgian"
  BEL_an_ADJ:0 "Belgian"
 
- AOB_ni:0 "Outback Steakhouse Reich"
- AOB_ni_DEF:0 "The Outback Steakhouse Reich"
+ AOB_ni:0 ""
+ AOB_ni_DEF:0 ""
  AOB_ds:0 ""
  AOB_ds_DEF:0 ""
  AOB_rc:0 ""
@@ -6682,8 +6682,8 @@ SAN_an_ADJ:0 "Indian"
  AOB_lb_DEF:0 ""
  AOB_ss:0 ""
  AOB_ss_DEF:0 ""
- AOB_jc:0 ""
- AOB_jc_DEF:0 ""
+ AOB_jc:0 "Outback Commune"
+ AOB_jc_DEF:0 "The Outback Commune"
  AOB_ni_ADJ:0 "Outback"
  AOB_rc_ADJ:0 "Outback"
  AOB_lb_ADJ:0 "Outback"
