--- a/localisation/english/PB_Martians_l_english.yml
+++ b/localisation/english/PB_Martians_l_english.yml
@@ -52,7 +52,7 @@
 
   MIF_Reinforcement_Protocols_tt:0 "§YThe amount of Units and Equipment sent from the Homeworld will§! §Gincrease!§!"
 
-  MIF_Begin_Terraforming_tt:0 "§YThe speed of §!§rconverting§! §Ystates to Martian culture will increase by §!§G25%§!"
+  MIF_Begin_Terraforming_tt:0 "§YWe can begin§!§rconverting§! §Ystates to Martian §!§Gcores§!"
 
   MIF_Study_Bacteria_tt:0 "§YThis will §Gprevent§! §Your forces from being affected by Earth diseases§!"
 
