--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -871,6 +871,8 @@
   PB_Idea_BEF_Struggles_of_Americanization:0 "The Struggles of Americanization"
   PB_Idea_BEF_Struggles_of_Americanization_desc:0 "'Free Land for all those who want to experience true Freedom' - The old slogan from the advertisement campaigns to attract settlers to East Africa and set up farms and industries for themself and the Empire.\n\nIf only it could have been so easy.\n\nThe policies of Pershing are turning the colony more and more into a fire basket. Land is violently taken away from the natives for the settlers and any kind of resistance faces more violence. However what worked so easy in the good old times of the UC does not seem to bear the same fruits here in Africa. The ethnic groups, especially the Mahdist, Dervishes and Mau Mau continue to arm themself and fight back harder, focusing their attacks on settlers themself.\n\nPershing's Administration only knows one answer for these rising problems ... more violence. However Pershings recent methods involving fire bombinging jungles and realeasing Combatagates into the wild are facing more and more appaling reactions in London which could cost him his head."
 
+  ENG_vulcan_foundry_organization:0 "Vulcan Foundry"
+
   ##########################
   # TOOLTIPS
   ##########################
