More Prussia stuff

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -112,7 +112,7 @@
   PB_PRS_The_Last_One_Standing_tt:0 "\nWe must holdout against the Pacte for 250 days if we wish to prove ourselves as the legitimate German state.\n\nYou must complete all the below focuses while at war with the Pacte if you wish to inherit the remains of Habsburg Germany."
   PB_PRS_Germany_United_tt:0 "Once France is defeated you will gain control over all French occupied regions in Germany, same for Russia as well.\n\n"
   PB_PRS_Alliance_With_The_Anglos_tt:0 "\n§gThe British AI will always approve of this request§!"
-  PB_PRS_The_Men_In_Black_tt:0 "\n§gEnables the International mechanic, allowing for the infiltration of government networks across the globe. Engaging with this mechanic is the only way to receive new§! §CResearch Slots.§!"
+  PB_PRS_The_Men_In_Black_tt:0 "\n§gEnables the International mechanic, allowing for the infiltration of government networks across the globe."
   PB_PRS_Imperium_In_Imperio_tt:0 "Has concluded the International mechanic"
   PB_PRS_Establish_Council_Presence_NA_tt:0 "§GUnlocks§! Council operations in North America"
   PB_PRS_Promote_Europeanism_2_tt:0 "\nIf you have the §YYouth Camps§! national Spirit, you will gain an additional: §G+1.00%§! §HRecruitable Population§!\n\nThe Youth Programs National Spirit can be found in the following focus:\n\n\n\n\n£GFX_PRS_Youth_Program_Spirit\n\n\n \n\n\n"
@@ -120,7 +120,7 @@
   PB_PRS_Prussia_On_The_World_Stage_tt:0 "Give §YThe Italian Social Republic§! market access."
   PB_PRS_Prussia_On_The_World_Stage_2_tt:0 "Give §YThe Holy Order of Spain§! market access."
   PB_PRS_The_Reich_In_A_New_Age_tt:0 "\nDemands will be sent for control over the following states to be transferred to Prussia assuming you don't control them: §YSchleswig-Holestein§!, §YHamburg§!, §YHannover§!, §YThuringen§!, §YOberschlesien§!, and §YKatowice§!. Should these demands be accepted you will immediately gain control of these states and core them."
-
+  PB_PRS_Appeal_To_The_German_Diaspora_tt:0 "\nThe above on-map decisions grant §G+2§! building slots in their respective state and §G+2.5%§! stability when completed."
 
   ##########################
   # MECHANICS
@@ -179,6 +179,10 @@
   PRS_Hold_Military_Parades:0 "Hold State-Wide Military Parades"
   PRS_Stabilize_The_Nation:0 "Stabilize The Nation"
   PRS_Arm_The_Anti_Revolutionaries:0 "Arm The Anti-Revolutionaries"
+  PRS_Expand_Civilian_Industrial_Capacity_763:0 "Expand Civilian Industrial Capacity (1)"
+  PRS_Expand_Civilian_Industrial_Capacity_5:0 "Expand Civilian Industrial Capacity (2)"
+  PRS_Expand_Civilian_Industrial_Capacity_85:0 "Expand Civilian Industrial Capacity (3)"
+  PRS_Expand_Civilian_Industrial_Capacity_86:0 "Expand Civilian Industrial Capacity (4)"
 
   PB_PRS_The_Origin_Of_Our_Race_tt:0 "\n§gUnlocks the ability to £PRS_shovel §HExcavate§! sites across the globe in the pursuit of creating a state accepted view towards the history of our peoples. You will be able to improve the §YÜbermensch§! spirit through excavations.§!\n\n"
   PB_PRS_Origin_Of_Our_People:0 "Excavation Sites"
@@ -236,17 +240,17 @@
   PRS_Member_6:0 "Council Member Six: Jurisdiction over §YMiddle East§!\n\nClick to open decisions relating to International operations in §YMiddle East§!"
   PB_PRS_Not_Decision:0 "This is not a decision, just a visual aid."
   PRS_North_America_Decisions:0 "Council Presence In North America: [?PRS_NA_Int]%"
-  PRS_North_America_Decisions_desc:0 "Once the council presence in North America reaches 100% you will gain access to one final region specific operation that wil grant one additonal research slot. Each region has its own specific decisions and one generic decision that re-enables every following day. Once the entire globe is under the full control of the council an additional final decision will become available which will contain a final reward and conclude this mechanic."
+  PRS_North_America_Decisions_desc:0 "Once the council presence in North America reaches 100% you will gain access to one final region specific operation that will grant intel for countries in the region. Each region has its own specific decisions and one generic decision that re-enables every following day. Once the entire globe is under the full control of the council an additional final decision will become available which will contain a final reward and conclude this mechanic."
   PRS_South_America_Decisions:0 "Council Presence In South America: [?PRS_SA_Int]%"
-  PRS_South_America_Decisions_desc:0 "Once the council presence in South America reaches 100% you will gain access to one final region specific operation that wil grant one additonal research slot. Each region has its own specific decisions and one generic decision that re-enables every following day. Once the entire globe is under the full control of the council an additional final decision will become available which will contain a final reward and conclude this mechanic."
+  PRS_South_America_Decisions_desc:0 "Once the council presence in South America reaches 100% you will gain access to one final region specific operation that will grant intel for countries in the region. Each region has its own specific decisions and one generic decision that re-enables every following day. Once the entire globe is under the full control of the council an additional final decision will become available which will contain a final reward and conclude this mechanic."
   PRS_Europe_Decisions:0 "Council Presence In Europe: [?PRS_EU_Int]%"
-  PRS_Europe_Decisions_desc:0 "Once the council presence in Europe reaches 100% you will gain access to one final region specific operation that wil grant one additonal research slot. Each region has its own specific decisions and one generic decision that re-enables every following day. Once the entire globe is under the full control of the council an additional final decision will become available which will contain a final reward and conclude this mechanic."
+  PRS_Europe_Decisions_desc:0 "Once the council presence in Europe reaches 100% you will gain access to one final region specific operation that will grant intel for countries in the region. Each region has its own specific decisions and one generic decision that re-enables every following day. Once the entire globe is under the full control of the council an additional final decision will become available which will contain a final reward and conclude this mechanic."
   PRS_Africa_Decisions:0 "Council Presence In Africa: [?PRS_AF_Int]%"
-  PRS_Africa_Decisions_desc:0 "Once the council presence in Africa reaches 100% you will gain access to one final region specific operation that wil grant one additonal research slot. Each region has its own specific decisions and one generic decision that re-enables every following day. Once the entire globe is under the full control of the council an additional final decision will become available which will contain a final reward and conclude this mechanic."
+  PRS_Africa_Decisions_desc:0 "Once the council presence in Africa reaches 100% you will gain access to one final region specific operation that will grant intel for countries in the region. Each region has its own specific decisions and one generic decision that re-enables every following day. Once the entire globe is under the full control of the council an additional final decision will become available which will contain a final reward and conclude this mechanic."
   PRS_Asia_Decisions:0 "Council Presence In Asia: [?PRS_AS_Int]%"
-  PRS_Asia_Decisions_desc:0 "Once the council presence in Asia reaches 100% you will gain access to one final region specific operation that wil grant one additonal research slot. Each region has its own specific decisions and one generic decision that re-enables every following day. Once the entire globe is under the full control of the council an additional final decision will become available which will contain a final reward and conclude this mechanic."
+  PRS_Asia_Decisions_desc:0 "Once the council presence in Asia reaches 100% you will gain access to one final region specific operation that will grant intel for countries in the region. Each region has its own specific decisions and one generic decision that re-enables every following day. Once the entire globe is under the full control of the council an additional final decision will become available which will contain a final reward and conclude this mechanic."
   PRS_Middle_East_Decisions:0 "Council Presence In Middle East: [?PRS_ME_Int]%"
-  PRS_Middle_East_Decisions_desc:0 "Once the council presence in the Middle East reaches 100% you will gain access to one final region specific operation that wil grant one additonal research slot. Each region has its own specific decisions and one generic decision that re-enables every following day. Once the entire globe is under the full control of the council an additional final decision will become available which will contain a final reward and conclude this mechanic."
+  PRS_Middle_East_Decisions_desc:0 "Once the council presence in the Middle East reaches 100% you will gain access to one final region specific operation that will grant intel for countries in the region. Each region has its own specific decisions and one generic decision that re-enables every following day. Once the entire globe is under the full control of the council an additional final decision will become available which will contain a final reward and conclude this mechanic."
   PB_PRS_Increase_NA_Council_Influence_5_tt:0 "Council Presence In North America: §G+5%§!"
   PB_PRS_Increase_NA_Council_Influence_10_tt:0 "Council Presence In North America: §G+10%§!"
   PB_PRS_Increase_SA_Council_Influence_5_tt:0 "Council Presence In South America: §G+5%§!"
@@ -464,7 +468,7 @@
   PB_PRS_The_Next_Generation_Of_Prussians:0 "The Next Generation of Prussians"
   PB_PRS_The_Next_Generation_Of_Prussians_desc:0 "A wise man once said, 'He alone who owns the youth gains the future.' No truer words have been said. If the children read our books and follow our beliefs, they'll teach it to their children. And then they'll teach it to theirs and so on and so foruth. We must make sure our children's minds are not clouded by Jacobin ideology, capitalistic corruption or ideas of liberalist democracy. They will know of Prussian glory and the exceptionalism of our military. The tales of Prussia's glory shall be engrained in the midns of our youth for centuries to come!"
   PB_PRS_Strengthen_The_Party:0 "Strengthen The Party"
-  PB_PRS_Strengthen_The_Party_desc:0 ""
+  PB_PRS_Strengthen_The_Party_desc:0 "As it stands the current goverment is still realing from political infighting once present years past. Whilst it has been mostly dealt with there are still some issues that need to be resolved. Let us introduce some new blood into the party to help address some of these political concerns."
   PB_PRS_Release_The_Hounds:0 "Release The Hounds"
   PB_PRS_Release_The_Hounds_desc:0 "If Prussia is to secure dominance across Europe, we must make sure we secure the absolute loyalty of the people. There are two ways this can be achieved, incentives and intimidation. We have already achieved the first half with our economic growth, it is time to make use of the second. Our internal security forces will make use of physical and psychological intimidation tactics to silence even the slightest whisper of dissent. Anyone who shows even the slightest disloyalty will either be corrected or removed."
   PB_PRS_The_Exceptional_Prussian:0 "The Exceptional Prussian"
@@ -472,7 +476,7 @@
   PB_PRS_Turn_Away_The_False_Hand:0 "Turn Away The False Hand"
   PB_PRS_Turn_Away_The_False_Hand_desc:0 "In a tense diplomatic standoff, Bouhler announced that the "Proud nation of Prussia unequivocally rejected the coercive pressures exerted by the formidable Russian Empire. With a rich history of sovereignty and independence, our proud nation staunchly defends its national interests and refuses to yield to external interference." Already Russia has taken a hostile attitude towards such a statement but has refused to comment any further on announcement Bouhler made today. Now we must sit and wait to see if the Bear tries anything too rash."
   PB_PRS_Sins_Of_A_Forgotten_Kind:0 "Sins Of A Forgotten Kind"
-  PB_PRS_Sins_Of_A_Forgotten_Kind_desc:0 ""
+  PB_PRS_Sins_Of_A_Forgotten_Kind_desc:0 "When Prussia first birthed itself out of the fires of the post-Great War years it found itself socially and politically divided. It wasn't until Bouhler and the Vaterlandsfront secured power that Prussia finally returned to some semblance of law and order. We must do away with these traumatic memories and cherish all that we have achieved."
   PB_PRS_Our_Wisest_Mentor:0 "Our Wisest Mentor"
   PB_PRS_Our_Wisest_Mentor_desc:0 "While a capable soldier, we must not forget that Bouhler truly established himself as a stateman. Using his political genius, he lead our nation through the turbulent years after the Great War. Turning what easily could have become a mismanaged pariah state, into a mightly industrial nation. Our people stand more united than ever before, with political stability unheard of in the Federation. All thanks to Bouhler's leadership."
   PB_PRS_Our_Mightiest_Hero:0 "Our Mightiest Hero"
@@ -550,17 +554,17 @@
   PB_PRS_Venerate_The_Working_Father:0 "Venerate The Working Father"
   PB_PRS_Venerate_The_Working_Father_desc:0 "There is no man as worthy of praise as the humble worker. It is he who toils endlessly to create such works of quality and design that our rivals eye with envy. Such dedication should be venerated as an example of the great Prussian spirit."
   PB_PRS_Prussian_Efficiency:0 "Prussian Efficiency"
-  PB_PRS_Prussian_Efficiency_desc:0 ""
+  PB_PRS_Prussian_Efficiency_desc:0 "If we are expected to hold off against the Anglo horde in central Europe, then we best expand our industrial capabilities so that our military can withstand anything that is thrown at it, let us highlight the historical importance of our craftsmen so that they may be inspired to produce more war stuffs.  "
   PB_PRS_Science_Without_Hinderance:0 "Science Without Hinderance"
   PB_PRS_Science_Without_Hinderance_desc:0 "Our nation is host to some of the great scientists and engineers in all of Europe. Individuals restricted only by the laws and morality society had imposed upon them. But no more, our scientists shall no longer be bound by petty morality, only by practicality. We shall remove virtually all restrictions for scientific advancement within our nation, we shall create great engines of war, biomechanical terrors and automated machines to ensure our citizens enjoy the finest of lives. When we open the gates of war, our enemies will be flooded by our creations."
   PB_PRS_The_Mind:0 "The Mind"
-  PB_PRS_The_Mind_desc:0 ""
+  PB_PRS_The_Mind_desc:0 "Our country is home to many intellectuals, let us foster their spirits and ensure that these great men are given all that they need so that we can ensure our country does not full mind in any technological criterions."
   PB_PRS_The_Heart:0 "The Heart"
-  PB_PRS_The_Heart_desc:0 ""
+  PB_PRS_The_Heart_desc:0 "The Prussian homeland has produced itself a people that care and nurture for the land they call home, unlike those pesky Anglos that wish to exploit the Earth upon which they stand on. Prussians have and will continue to prove their love of the Fatherland until the end of time."
   PB_PRS_The_Soul:0 "The Soul"
-  PB_PRS_The_Soul_desc:0 ""
+  PB_PRS_The_Soul_desc:0 "The spirit of the Prussian people is one dedicated to the promotion of civilization and stability. Whilst the history of Prussia is one full of great military victories the current administration has also seen to emphasize the importance of proper domestic administration. "
   PB_PRS_Rebirth_Of_The_Nation:0 "Rebirth Of The Nation"
-  PB_PRS_Rebirth_Of_The_Nation_desc:0 ""
+  PB_PRS_Rebirth_Of_The_Nation_desc:0 "Today begins the greates trial of survival our country has ever witnessed, there is no sacrifice too small to be made for Prussia and no sacrifice too big. Today Prussia proves to the world just what exactly it is capable of. With rifle in hand and spirits high we shall correct the mistakes of the past and restore our nation's prestige."
   PB_PRS_Clear_The_Skies:0 "Clear The Skies"
   PB_PRS_Clear_The_Skies_desc:0 "It has been said that if we lose the war in the sky, we lose the war on the ground and we lose it fast. There is a great deal of truth to these words. While we cannot match the airforce of those who would do us harm, we can ensure our cities and factories will remain untouched. We will set up Anti-Aircraft batteries, any hostile bombers or fighter planes will have to fly through a wall of steel. And they shall be torn to shreds as a result."
   PB_PRS_Whatever_The_State_Needs:0 "Whatever The State Needs"
@@ -873,6 +877,13 @@
   Prussian.27.d:0 "Prussia has demanded that we transfer control of Katowice over to them." 
   Prussian.27.a:0 "This is some sort of joke, right?"
   Prussian.27.b:0 "Let them have it."
+  Prussian.28.t:0 "Opening of the Danzig Botanical Garden"
+  Prussian.28.d:0 "" 
+  Prussian.28.a:0 "What a beautiful sight."
+  Prussian.29.t:0 "Industrial Patriotism"
+  Prussian.29.d:0 "" 
+  Prussian.29.a:0 "For Country! For Vaterland!"
+
   
   Prussian_Anarcho.1.t:0 "Prussian Exiles Arrive"
   Prussian_Anarcho.1.d:0 "" 
