--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -452,6 +452,7 @@ PB_ENG_AIOC:0 "Anglo-Persian Oil Company"
 PB_ENG_ICAS:0 "Imperial Coal & Steel"
 PB_ENG_English_Electric:0 "EIEC - London"
 PB_ENG_IBC:0 "Imperial Broadcasting Corporation"
+ENG_vulcan_foundry_organization:0 "Vulcan Foundry"
 
 ##########################
 # GERMANY - COLLAB AND LOYALIST
@@ -503,6 +504,7 @@ PB_AME_IBM:0 "Imperial Business Machines"
 PB_AME_Maynard_Rifling:0 "Maynard Rifling Incorporated"
 PB_AME_Sharps_Rifle_Company:0 "Sharps Rifle Company"
 PB_AME_Winchester_Rifles:0 "Winchester Arms Association"
+AME_wpfp_arsenal_organization:0 "West Point Foundry"
 PB_AME_Vickers_American:0 "Vickers-Armstrong"
 PB_AME_Maxwell_Motors:0 "Maxwell-Chrysler"
 PB_AME_Ford_Company:0 "Ford Motor Company"
